--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,8 @@ compatibility_date = "2025-10-08"
 
 [vars]
 POSTMARK_URL = "https://api.postmarkapp.com/email"
+WEBHOOK_USERNAME = "Rick"
+WEBHOOK_PASSWORD = "123"
 
 [[d1_databases]]
 binding = "DB"
