--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rallyflare",
   "description": "Cloudflare's native serverless SQL database.",
   "private": true,
+  "workspaces": [
+    "services/*",
+    "shared"
+  ],
   "cloudflare": {
     "label": "Worker + D1 Database",
     "products": [
@@ -21,7 +25,8 @@
   },
   "devDependencies": {
     "typescript": "5.8.3",
-    "wrangler": "4.21.x"
+    "wrangler": "4.21.x",
+    "@cloudflare/workers-types": "^4.20240512.0"
   },
   "scripts": {
     "cf-typegen": "wrangler types",
