refactor: simplify email HTML handling - single responsibility
SIMPLIFICATION:
- Removed markdown parsing from AI worker (70+ lines deleted)
- Removed marked.js dependency
- AI worker now returns plain text only (single responsibility)
- Ingest worker handles ALL email formatting in one place
- Created utils/footer.ts for consistent footer generation
- HTML conversion is now simple: text.replace(/\n/g, '<br>') + footer

BENEFITS:
- Less code (removed ~70 lines)
- No more markdown parsing failures
- Clear separation: AI generates content, Ingest formats emails
- Footer logic consolidated in one util function
- Easier to test and maintain

Worker responsibilities now crystal clear:
- AI: Talk to OpenAI, return plain text
- Ingest: Format emails, add footer, coordinate services
- Mailer: Send via Postmark
- Attachments: Store files in R2

--- a/services/ai/package.json
+++ b/services/ai/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "src/index.ts",
     "dependencies": {
-        "shared": "*",
-        "openai": "^4.28.0"
+        "openai": "^4.28.0",
+        "shared": "*"
     }
 }
