refactor: cleanup dead code and consolidate utils
- Drop unused 'comments' table via migration 0026
- Consolidate footer and email formatting logic into emailFormatting.ts
- Remove deprecated GPT-4o option from personas UI
- Organize shared types for better maintainability

--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,11 @@
 {
     "name": "shared",
     "version": "1.0.0",
-    "main": "types.ts"
+    "main": "types/index.ts",
+    "exports": {
+        ".": "./types/index.ts",
+        "./types": "./types/index.ts",
+        "./types/common": "./types/common.ts",
+        "./types/api": "./types/api.ts"
+    }
 }
