--- a/services/attachments/package.json
+++ b/services/attachments/package.json
@@ -4,5 +4,8 @@
     "main": "src/index.ts",
     "dependencies": {
         "shared": "*"
+    },
+    "devDependencies": {
+        "wrangler": "^4.50.0"
     }
 }
